--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
                             </div>
                         </div>
                         <div class="row d-lg-none">
-                            <div class="col-lg-12">
+                            <div class="col-lg-12 pl-0">
                                 <div class="carousel-ourbusiness">
                                     <div class="item">
                                         <img class="img-fluid w-100 d-block" src="images/our-value-content-images-mobile-15.jpg" alt="">
