--- a/contact.html
+++ b/contact.html
@@ -258,7 +258,7 @@
             <label class="font-roboto text-gray">PESAN :</label>
             <textarea class="form-control input-gray" rows="7"></textarea>
           </div>
-          <a href="#" class="link-blue-border d-block py-2 my-lg-0 my-5 text-center button-form">
+          <a href="#" class="link-blue-border d-block py-lg-2 py-3 my-lg-0 my-5 text-center button-form">
             KIRIM PESAN
           </a>
       </div>
@@ -266,7 +266,7 @@
     </div>
     <div class="container-fluid" data-aos="fade-up">
       <div class="row">
-        <div class="col-lg-12 px-lg-0">
+        <div class="col-lg-12 px-0">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8153953.168616226!2d107.46645460032195!3d-3.71766482772731!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2df679e3fd85d3c5%3A0x2bb0c88e0315e87b!2sPT.%20Ansaf%20Inti%20Resources!5e0!3m2!1sen!2sid!4v1616899120793!5m2!1sen!2sid" style="border:0;" allowfullscreen="" class="w-100" height="700"></iframe>
         </div>
       </div>
